SPCTR-3408: Fix - Container background image x-position issue (#3527)
* container-background-image-custom-position

* fixed x-position issue for background image

* Added centralized custom position for container background image

* updated toggle name

* updated custom background position

* removed unwanted spaces

* updated changelog

--- a/src/components/background/editor.lazy.scss
+++ b/src/components/background/editor.lazy.scss
@@ -108,4 +108,8 @@
 			}
 		}
 	}
+
+	.uag-background-image-axis-position {
+		margin-bottom: 24px;
+	}
 }
